// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel calls the orientation handler on orientation change 1`] = `
[
  <RCTScrollView
    bounces={false}
    data={
      [
        {
          "key": 1,
          "str": "qux",
        },
      ]
    }
    decelerationRate="fast"
    disableIntervalMomentum={true}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    renderToHardwareTextureAndroid={true}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    showsVerticalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={350}
    stickyHeaderIndices={[]}
    viewabilityConfig={
      {
        "itemVisiblePercentThreshold": 60,
      }
    }
    viewabilityConfigCallbackPairs={
      [
        {
          "onViewableItemsChanged": [Function],
          "viewabilityConfig": {
            "itemVisiblePercentThreshold": 60,
          },
        },
      ]
    }
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "width": 350,
            }
          }
        >
          <Text>
            qux
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>,
  <CarouselPageIndicator
    currentIndex={0}
    numberOfItems={1}
    style={
      {
        "bottom": 0,
        "flexDirection": "row",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
      }
    }
  />,
]
`;

exports[`Carousel renders with just one item in the data 1`] = `
[
  <RCTScrollView
    bounces={false}
    data={
      [
        {
          "key": 1,
          "str": "qux",
        },
      ]
    }
    decelerationRate="fast"
    disableIntervalMomentum={true}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    renderToHardwareTextureAndroid={true}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    showsVerticalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={750}
    stickyHeaderIndices={[]}
    viewabilityConfig={
      {
        "itemVisiblePercentThreshold": 60,
      }
    }
    viewabilityConfigCallbackPairs={
      [
        {
          "onViewableItemsChanged": [Function],
          "viewabilityConfig": {
            "itemVisiblePercentThreshold": 60,
          },
        },
      ]
    }
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "width": 750,
            }
          }
        >
          <Text>
            qux
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>,
  <CarouselPageIndicator
    currentIndex={0}
    numberOfItems={1}
    style={
      {
        "bottom": 0,
        "flexDirection": "row",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
      }
    }
  />,
]
`;

exports[`Carousel renders with multiple items in the data 1`] = `
[
  <RCTScrollView
    bounces={false}
    data={
      [
        {
          "key": 1,
          "str": "foo",
        },
        {
          "key": 2,
          "str": "bar",
        },
      ]
    }
    decelerationRate="fast"
    disableIntervalMomentum={true}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={true}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    renderToHardwareTextureAndroid={true}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    showsVerticalScrollIndicator={false}
    snapToAlignment="start"
    snapToInterval={750}
    stickyHeaderIndices={[]}
    viewabilityConfig={
      {
        "itemVisiblePercentThreshold": 60,
      }
    }
    viewabilityConfigCallbackPairs={
      [
        {
          "onViewableItemsChanged": [Function],
          "viewabilityConfig": {
            "itemVisiblePercentThreshold": 60,
          },
        },
      ]
    }
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "width": 750,
            }
          }
        >
          <Text>
            foo
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={
          [
            {
              "flexDirection": "row",
            },
            null,
          ]
        }
      >
        <View
          style={
            {
              "width": 750,
            }
          }
        >
          <Text>
            bar
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>,
  <CarouselPageIndicator
    currentIndex={0}
    numberOfItems={2}
    style={
      {
        "bottom": 0,
        "flexDirection": "row",
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "right": 0,
      }
    }
  />,
]
`;
